--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
 <head>
-<h1>Dropdown Menu</h1>
 <style>
 .buttonlook{
   background: LightSkyBlue;
@@ -35,13 +34,11 @@ text-decoration:none;
 <body>
 
 <div class="dropdown">
-  <span class='buttonlook'>Cakes&nbsp</span>
+  <span class='buttonlook'>Clasic Games&nbsp</span>
   <div class="dropdown-content">
-    <p>List of Cake Shops</p>
-    <li><a href="https://www.shophansencakes.com/cakes.html">Hansen's Cake<a></li>
-    <li><a href="http://www.bigsugarbakeshop.com/cakes.html">Big Sugar Bakeshop<a></li>
-	<li><a href="http://larkcakeshop.com/cakes/">Lark Cake Shop<a></li>
-	<li><a href="http://parisbaguette.com/cakes---desserts.html">Paris Baguette<a></li>
+    <li><a href="https://www.shophansencakes.com/cakes.html">Simon<a></li>
+    <li><a href="http://www.bigsugarbakeshop.com/cakes.html">Tic-Tac-Toe<a></li>
+	<li><a href="http://larkcakeshop.com/cakes/">Crossword<a></li>
   </div>
 </div>
 <div class="dropdown">
